[package]
name = "replayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloud-storage = "0.11.1"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "rt", "time"] }
thiserror = "1.0.44"
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = "0.3.17"
reqwest = "0.11.18"
serde = "1.0.178"
serde_json = "1.0.104"
regex = "1.9.1"
