[workspace]
members = [
    "backfill",
    "db",
    "gcs",
    "net",
    "workers",
]

[workspace.package]
version = "0.0.1"
authors = ["Jito Labs <team@jito.wtf>"]
repository = "https://github.com/jito-labs/memento"
homepage = "jito.wtf"
license = "Apache-2.0"
edition = "2021"
publish = false

[workspace.dependencies]
bytes = "1.2"
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "=4.2.7", features = ["derive", "env"] }
clickhouse-rs = "1.0.0-alpha.1"
cloud-storage = "0.11.1"
crossbeam-channel = "0.5.8"
futures = "0.3.28"
futures-util = "0.3.25"
histogram = "0.7.4"
jito-gcs = { path = "gcs" }
jito-net = { path = "net" }
jito-protos = { path = "protos" }
jito-replayer-backfill = { path = "backfill" }
jito-replayer-db = { path = "db" }
jito-workers = { path = "workers" }
prost = "0.11.9"
prost-types = "0.11.9"
regex = "1.9.1"
reqwest = { version = "0.11.20", features = ["stream"] }
serde = "1.0.152"
serde_derive = "1.0.171"
serde_json = "1.0.102"
serde_yaml = "0.9.25"
solana-account-decoder = { version = "1.16.20" }
solana-geyser-plugin-interface = { version = "1.16.20" }
solana-ledger = { version = "1.16.20" }
solana-rpc-client = { version = "1.16.20" }
solana-rpc-client-api = { version = "1.16.20" }
solana-runtime = { version = "1.16.20" }
solana-sdk = { version = "1.16.20" }
solana-storage-bigtable = { version = "1.16.20" }
spl-token = "4.0.0"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "rt", "time"] }
tokio-retry = "0.3.0"
tokio-stream = { version = "0.1.14", features = ["net"] }
tonic = "0.8.3" # note: 0.8 used because it allows larger max message size, which is breaking the stream
tonic-build = "0.8.4" # note: 0.8 used because it allows larger max message size, which is breaking the stream
tracing = { version = "0.1.37" }
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
