[package]
name = "jito-workers"
readme = "../README.md"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
cloud-storage = { workspace = true }
crossbeam-channel = { workspace = true }
futures-util = { workspace = true }
jito-gcs = { workspace = true }
jito-net = { workspace = true }
jito-protos = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true }
solana-ledger = { workspace = true }
solana-runtime = { workspace = true }
solana-sdk = { workspace = true }
solana-storage-bigtable = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "rt", "time"] }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "jito-worker-cli"
path = "src/bin/cli.rs"
